2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Don't pass ReceiveType.List to
	  protocol chat.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs, AssemblyInfo.cs.in: Removed AssemblyInfo.cs.in files, not
	  needed anymore as we use a shared AssemblyVersion.cs(.in) now.

2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Engine-IRC.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Added listing ban list support to
	  /ban command (closes trac bug #17).

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented /who command (closes trac
	  bug #51).

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Use global username if server
	  username is empty (closes trac bug #36).
	
	  Set highlight for query actions and notices.

2008-07-15  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented FindGroupChats().
	
	  Implemented OpenChat().
	
	  Implemented CloseChat().

2008-07-14  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Fixed CommandCycle().

2008-07-07  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Implemented lag indicator.

2008-06-30  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: Pass IRC errors to frontend.
	
	  Pass IRC messages to protocol manager also if being on session chat.

2008-06-02  Mirco Bauer <meebey@meebey.net> 

	* Protocols/Irc/IrcProtocolManager.cs: _Run(): Fixed reconnect handling.
	
	  OnDisconnected(): Don't disable the protocol chat, else the user loses
	  the control over the protocol manager.

2008-06-02  Mirco Bauer <meebey@meebey.net> 
