@@ -1,3 +1,9 @@
+2008-07-29  Mirco Bauer <meebey@meebey.net> 
+
+	* Protocols/Irc/IrcProtocolManager.cs: Fixed resetting colors in messages
+	  where clear control character is used. (thanks to Zhila for spotting
+	  this)
+
 2008-07-27  Mirco Bauer <meebey@meebey.net> 
 
 	* Protocols/Irc/IrcProtocolManager.cs: Don't pass ReceiveType.List to
